# rust-graphql

./: Cargo.toml
src/: main.rs
src/config/: mongo.rs
src/database/: mongo.rs
src/graph_handler/: handler.rs
src/graph_schemas/: schemas.rs
src/handler/: graphql_handler.rs
src/models/: collection.rs  event.rs  mod.rs  token.rs  user_profile.rs
src/schemas/: project_schema.rs
