[package]
name = "graphql-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-graphql = { version = "4.0", features = ["bson", "chrono"] }
async-graphql-actix-web = "4.0"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
serde_json = { version = "1.0.89", features = ["arbitrary_precision", "raw_value"] }
tokio = { version = "1", features = ["full"] }


[dependencies.mongodb]
version = "2.2.0"